@@ -118,6 +118,10 @@ static const char *s_PreserveEnts[] =
 	"info_player_deathmatch",
 	"info_player_combine",
 	"info_player_rebel",
+	"info_player_terrorist",
+	"info_player_counterterrorist",
+	"info_player_axis",
+	"info_player_allies",
 	"info_map_parameters",
 	"keyframe_rope",
 	"move_rope",
